argo/payment-app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: payment-app
  labels:
    app: payment-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-app
  template:
    metadata:
      labels:
        app: payment-app
    spec:
      containers:
        - name: payment-app
          image: ghcr.io/joranbergfeld/webshop/payment-app:saga-final
          ports:
            - containerPort: 15001
              protocol: TCP
          resources: { }
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
