argo/payment-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order-app
  name: order-app
spec:
  ports:
    - name: 15001-tcp
      port: 15001
      protocol: TCP
      targetPort: 15001
  selector:
    app: order-app
  sessionAffinity: None
  type: ClusterIP
