argo/payment-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: payment-app
  name: payment-app
spec:
  port:
    targetPort: 15001-tcp
  to:
    kind: Service
    name: payment-app
    weight: 100
